fix(location): spacing and overflow

--- a/assets/style/css/local.css
+++ b/assets/style/css/local.css
@@ -100,7 +100,7 @@ body {
   color: #b59a30;
   font-size: 3rem;
   text-transform: uppercase;
-  margin: 8rem 0 4rem 0;
+  margin: 4rem 0 2rem 0;
   text-align: center;
   font-size: 2rem;
   width: 100%;
