--- a/assets/style/css/reserve.css
+++ b/assets/style/css/reserve.css
@@ -110,7 +110,7 @@ body {
   color: #b59a30;
   font-size: 3rem;
   text-transform: uppercase;
-  margin: 8rem 0 4rem 0;
+  margin: 4rem 0 2rem 0;
   text-align: center;
   margin-top: 3rem;
   margin-bottom: 2rem;
