--- a/assets/style/scss/partials/_mixings.scss
+++ b/assets/style/scss/partials/_mixings.scss
@@ -6,7 +6,7 @@
 	color: colors.$gold;
 	font-size: 3rem;
 	text-transform: uppercase;
-	margin: 8rem 0 4rem 0;
+	margin: 4rem 0 2rem 0;
 	text-align: center;
 }
 
