--- a/assets/style/scss/partials/location/_body.scss
+++ b/assets/style/scss/partials/location/_body.scss
@@ -1,7 +1,9 @@
 body {
 	display: flex;
 	justify-content: center;
-	height: 100vh;
+	min-height: 100vh;
+	height: auto;
 	width: 100vw;
 	margin: 0;
+	overflow: hidden;
 }
