--- a/assets/style/scss/partials/location/_info.scss
+++ b/assets/style/scss/partials/location/_info.scss
@@ -21,7 +21,7 @@
 		text-decoration: none;
 		color: white;
 		display: block;
-		margin: 3rem 0;
+		margin: 1rem 0;
 		font-size: 2rem;
 	}
 	.email:hover,
